--- a/wp-content/themes/amosra-triangle/style.css
+++ b/wp-content/themes/amosra-triangle/style.css
@@ -8,7 +8,7 @@ Version: 1.0.0
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: amosra-triangle
-Tags:
+Tags: translation-ready, custom-background, theme-options, custom-menu, post-formats, threaded-comments
 
 This theme, like WordPress, is licensed under the GPL.
 Use it to make something cool, have fun, and share what you've learned with others.
@@ -33,7 +33,8 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 # Accessibility
 # Alignments
 # Clearings
-
+# Header
+# Footer
 # Widgets
 # Content
 	## Posts and pages
@@ -573,7 +574,6 @@ a:active {
 	position: relative;
 	margin: 15px 20px;
 }
-
 .main-navigation a {
 	display: block;
 	text-decoration: none;
@@ -592,7 +592,13 @@ a:active {
 	border-color: #FFFFFF;
 
 }
+/* SUB Menu - Level 1*/
+.main-navigation li.menu-item-has-children a:after {
+	width: 0%;
+}
 .main-navigation ul ul {
+	background: rgba(255,255,255,0.9);
+	color: #000000;
 	box-shadow: 0 3px 3px rgba(0, 0, 0, 0.2);
 	float: left;
 	position: absolute;
@@ -608,6 +614,7 @@ a:active {
 
 .main-navigation ul ul a {
 	width: 200px;
+	color: #000;;
 }
 
 .main-navigation ul ul li {
@@ -648,13 +655,13 @@ a:active {
 	}
 }
 
-/* Small menu. */
+/* Small Menu. */
 .menu-toggle,
 .main-navigation.toggled ul {
 	display: block;
-	position: absolute;
-	left: 1em;
-	bottom: 1em;
+}
+.menu-toggle {
+
 }
 
 @media screen and (min-width: 37.5em) {
@@ -687,7 +694,21 @@ a:active {
 	text-align: right;
 	width: 50%;
 }
-
+/*Secondary Menu - Footer Menu*/
+.secondary-menu { display: block; width:100%;}
+.secondary-menu div {text-align: center}
+.secondary-menu ul { display:inline; float:none; width: 100%;margin: 0 auto;}
+.secondary-menu li { list-style-type: none; display: inline; font-size: 14px;}
+.secondary-menu li a {
+	color:#FFFFFF;
+	line-height:15px;
+	text-decoration:none;
+	font-weight:normal;
+	border-right: 1px solid #FFFFFF;
+	padding: 0 7px 0 3px;
+}
+.secondary-menu li a:hover { color:#fff; text-decoration:underline;}
+.secondary-menu li:last-child > a {border-right: none;} /* remove pipe from last item */
 /*--------------------------------------------------------------
 # Accessibility
 --------------------------------------------------------------*/
@@ -797,6 +818,13 @@ a:active {
 	display: none;
 }
 /*--------------------------------------------------------------
+# Footer
+--------------------------------------------------------------*/
+.site-footer {
+	height: 200px;
+	background: #aeafaf;
+}
+/*--------------------------------------------------------------
 # Widgets
 --------------------------------------------------------------*/
 .widget {
@@ -815,7 +843,6 @@ a:active {
 ## Global
 --------------------------------------------------------------*/
 .site-main{
-	margin: 1.4em;
 	font-size: .8em;
 	line-height: 1.6em;
 }
@@ -835,7 +862,6 @@ a:active {
 @media screen and (min-width: 57em) {
 	.site-main {
 		font-size: 1em;
-		margin: 1.8em;
 	}
 }
 /*--------------------------------------------------------------
@@ -992,4 +1018,16 @@ object {
 .page-template-no-sidebar-page-php .entry-meta
 {
 	padding-right: 0;
+}
+/*Ciclone Slider Custome CSS*/
+.cycloneslider-template-standard .cycloneslider-pager {
+	bottom:18px!important;
+}
+.su-heading-style-default,
+.su-heading-style-default .su-heading-inner{
+	border:none !important;
+}
+.entry-content {
+	max-width:600px;
+	margin: 0 auto;
 }
